--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,4 +1,4 @@
-name: CI - Build & Push Strapi Image
+name: CI - Build and Push the Strapi Image into AWS ECR
 
 on:
   push:
@@ -53,3 +53,4 @@ jobs:
           echo "==== CI FINISHED ===="
           echo "IMAGE_REPO: ${{ steps.build-and-push.outputs.IMAGE_REPO }}"
           echo "IMAGE_TAG:  ${{ steps.set-tag.outputs.IMAGE_TAG }}"
+
