--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,8 +1,8 @@
 name: CI - Build and Push the Strapi Image into AWS ECR
 
-# on:
-#   push:
-#     branches: [ "main" ]
+on:
+  push:
+    branches: [ "main" ]
 
 jobs:
   build-and-push:
@@ -58,13 +58,14 @@ jobs:
         uses: benc-uk/workflow-dispatch@v1
         with:
           workflow: "CD - Terraform (manual)"
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.TOKEN_GITHUB }}
           inputs: |
             {
               "image_repo": "301782007642.dkr.ecr.eu-north-1.amazonaws.com/strapi",
               "image_tag": "${{ steps.set-tag.outputs.IMAGE_TAG }}",
               "auto_approve": "true"
             }
+
 
 
 
